# ucal_manager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.rst  main.cpp  main_local.cpp  main_server.cpp
docs/: Doxyfile
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/common/: config.cpp  config.h  defaults.h  exceptions.h  keys.h  logger.cpp  logger.h  measures.h  timestamp.cpp  timestamp.h  units.h  utils.h
source/device/: CMakeLists.txt
source/device/device/: acquire.h  daqboard_device.cpp  device.h  interface.h  mock.cpp  mock_device.cpp  timer.cpp  timer.h
source/runtime/: CMakeLists.txt
source/runtime/runtime/: block.cpp  block.h  core.cpp  core.h  i_state.h  state_machine.cpp  state_machine.h
source/service/: CMakeLists.txt
source/service/service/: client2.py  server.proto  server_impl.cpp  server_impl.h
source/storage/: CMakeLists.txt
source/storage/storage/: frame.cpp  frame.h  signal.cpp  signal.h  storage.cpp  storage.h
tests/: CMakeLists.txt  run_hardware_tests.cpp  run_tests.cpp  test_common.cpp  test_device.cpp  test_runtime.cpp  test_storage.cpp  tests_device.cpp  utils.h
